--- a/FrontEndAssignment.html
+++ b/FrontEndAssignment.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-     <!-- <div class="container"> -->
+    
       <div class="head">
 
           
@@ -26,7 +26,10 @@
       </div>
 
    
-    <div class="canvas"></div>
+    <div class="canvas">
+      <div class= "containerc">
+      </div>
+    </div>
 
     <div class="content">
       <div class = "container2">
@@ -47,7 +50,7 @@
 
         <li>
           <div class="circle"></div>
-           <p class="about">Keep the art for as long as you like .Buy only what you love</p> 
+           <p class="about">Keep the art for as long as you like.Buy only what you love</p> 
         </li>
 
         <li>
@@ -81,7 +84,6 @@
 </div>
 
 </div>
-<!-- </div> -->
 
 </body>
 
