--- a/frontend1/assgn.html
+++ b/frontend1/assgn.html
@@ -64,7 +64,7 @@
                     
           <div class="col-md-3">
  <div class= "intro-panel">
-          <h3 class="intro-heading">ANNOUNCEMENTS</h3>
+          <h3 class="heading">ANNOUNCEMENTS</h3>
           <div class="announcement">
           <p>Lorem ispum dolor sit amet, contur adipiscing elit mi eleifend ...</p>
           <footer>By <b>Amol</b> on 21 July 2012</footer>
@@ -129,7 +129,7 @@
               <ul class="nav navbar-nav navbar-left">
               <li><a href="">Home</a></li>
               <li><a href="">Services</a></li>
- <li><a href="">About</a></li>
+              <li><a href="">About</a></li>
               <li><a href="">Blog</a></li>
               <li><a href="">Contact</a></li>
               </ul>
